# Team-4

./: AllocateBudgetCommand.cpp  Builder.cpp  Builder.h  Building.cpp  Building.h  Business.cpp  CitizenObserver.h  CityBuilder.cpp  CollectTaxesCommand.cpp  CommercialBuilding.cpp  CommercialBuilding.h  CommercialBuildingBuilder.cpp  CommercialBuildingBuilder.h  Director.cpp  Director.h  EnforcePolicyCommand.h  Government.cpp  HousingSatisfactionStrategy.h  IndustrialBuilding.cpp  IndustrialBuilding.h  IndustrialBuildingBuilder.cpp  IndustrialBuildingBuilder.h  LandmarkBuilding.cpp  LandmarkBuilding.h  LandmarkBuildingBuilder.cpp  LandmarkBuildingBuilder.h  Makefile  Policy.h  README.md  ResidentialBuilding.cpp  ResidentialBuilding.h  ResidentialBuildingBuilder.cpp  ResidentialBuildingBuilder.h  Resource.cpp  ResourceApprovalHandler.cpp  ResourceAvailability.cpp  ResourceManager.cpp  SetTaxCommand.cpp  SetTaxCommand.h  TaxSatisfactionStrategy.h  (+1 more)
UnitTest/: Airport.cpp  AllocateBudgetCommand.h  Building.cpp  BuildingManager.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CityService.cpp  CityService.h  Director.cpp  Director.h  EmployedState.h  GovObserver.cpp  Government.cpp  JobSatisfactionStrategy.h  Jobs.cpp  LandmarkBuildingBuilder.cpp  LandmarkBuildingBuilder.h  LunchRush.cpp  LunchRush.h  PassengerTrain.h  PowerPlant.cpp  PublicTransit.h  ReadMe  ResourceAvailability.h  SetTaxCommand.cpp  TaxType.h  Taxi.h  Transportation.h  TraverseBus.cpp  TraverseCargoAirport.cpp  TraverseInsideRoad.cpp  TraversePassengerTrain.cpp  TraversePassengerTrain.h  Utility.cpp  (+4 more)
(+3308 files in other folders)
